@@ -12,7 +12,7 @@
 // See the License for the specific language governing permissions and
 // limitations under the License.
  
-package com.google.sps.utils;
+package com.google.plantasy.utils;
  
 import com.google.appengine.api.datastore.Entity;
 import com.google.appengine.api.datastore.DatastoreService;
@@ -33,7 +33,7 @@ public final class QuizTimingPropertiesUtils {
 
     private static final Logger log = Logger.getLogger(QuizTimingPropertiesUtils.class.getName());
 
-    static final List<String> quiz_questions = new ArrayList<String>(List.of(
+    static final List<String> quiz_questions = Arrays.asList(
         "Which plant has the most food growing from it?",
         "Which plant has the most food growing from it?",
         "Which plant has the prettiest colors?",
